fix jump animation

--- a/style.css
+++ b/style.css
@@ -35,15 +35,21 @@
 }
 
 .jump {
-    animation: jump 0.6s linear
+    animation: jump 0.5s linear
 }
 
 @keyframes jump {
     0% {
         top: 150px;
     }
+    30% {
+        top: 115px;
+    }
     50% {
         top: 80px;
+    }
+    80% {
+        top: 115px;
     }
     100% {
         top: 150px;
